--- a/RESTful_APIs/package.json
+++ b/RESTful_APIs/package.json
@@ -7,7 +7,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "server": "node --watch index.js --exec babel-node"
   },
   "dependencies": {
     "body-parser": "^2.2.0",
