Tweak: VS code settings for ES7 extension tweaked JS support removed.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,5 +33,7 @@
       }
     ],
     "comments": ""
-  }
+  },
+  "reactSnippets.settings.languageScopes": "typescript,typescriptreact,javascriptreact",
+  "reactSnippets.settings.importReactOnTop": false
 }
