Minor: Npm script to run both the api servers

--- a/JWT/api/package.json
+++ b/JWT/api/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "node --watch index"
+    "dev": "node --watch index",
+    "server": "node --watch server2"
   },
   "keywords": [],
   "author": "",
